locality/zoneprinter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zoneprinter
  labels:
    app: zoneprinter
spec:
  replicas: 3
  selector:
    matchLabels:
      app: zoneprinter
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: zoneprinter
    spec:
      containers:
      - name: frontend
        image: gcr.io/google-samples/zone-printer:0.1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: zoneprinter
  labels:
    app: zoneprinter
spec:
  type: ClusterIP
  ports:
  - port: 80 
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: zoneprinter
