locality/virtualservice-zoneprinter.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: zoneprinter-route
spec:
  hosts:
  - zoneprinter.default.svc.cluster.local
  http:
  - name: "zoneprinter"
    route:
    - destination:
        host: zoneprinter.default.svc.cluster.local
